# magzenie-django

./: .gitignore  Dockerfile  api.yaml  app_setup.py  app_setup_json.py  code.py  codeoutput.txt  coder.py  create_apps.sh  manage.py  models.py  models.txt  our_apps.json  output_all.py  output_views.py  project.md  pyproject.toml  readme copy.md  readme.md  setup.py
analytics/: models.py  serializers.py  urls.py  views.py
analytics/api/: analytics_api_serializer.py  analytics_api_view.py
analytics/migrations/: 0001_initial.py
analytics/models/: __init__.py  analytics_model.py
analytics/views/: __init__.py  analytics_view.py
api/: dynamic_api.py  serializers.py  urls.py  views.py
core/: admin.py  apps.py  urls.py  views.py
core/common/: ai_helper.py  ai_service.py  api_reponse_mixin.py  authentication.py  base_api.py  base_viewset.py  clients.py  custom_schema.py  expoert_to_heroku.py  factories.py  gpt_4o.py  install_tmux.py  mock_openai_client.py  openai_assistant_service.py  pinecone_helper.py  redis_decorator.py  redis_utils.py  slug_mixins.py  supabase_client.py  supabase_config.py  supabase_storage_utility.py  twillio_utils.py  update_heroku.py  upload_image.py
core/management/: serializers.py
core/middleware/: supabase_auth.py  swaggertoken.py  token_translate.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  base_model.py  basev2.py  managers.py  models.py  tiktok.py
core/supabase/: db_connect.py  function_service.py  schema_service.py  services.py
core/utils/: dynamic_utils.py  supabase_api.py  supabase_proxy.py
digital_setup/: apps.py  models.py  serializers.py  urls.py  views.py
digital_setup/api/: digital_setup_api_serializer.py  digital_setup_api_view.py
digital_setup/migrations/: 0001_initial.py
digital_setup/models/: __init__.py
digital_setup/views/: __init__.py  digital_setup_view.py
hellogpt/: asgi.py  celery.py  exceptions.py  middleware.py  schema.py  settings.py  urls.py  wsgi.py
hellogpt/api_docs/: api_schema.yaml  user_settings_api.yaml
hellogpt/middleware/: __init__.py  supa_middleware.py
magazines/: models.py  serializers.py  urls.py  views.py
magazines/api/: magazines_api_serializer.py  magazines_api_view.py
magazines/migrations/: 0001_initial.py
magazines/models/: __init__.py  magazines_model.py
media/: models.py  serializers.py  urls.py  views.py
media/views/: __init__.py  (+1 more)
notifications/: serializers.py  urls.py  views.py
payments/: models.py  serializers.py  urls.py  views.py
print_orders/: apps.py  serializers.py  urls.py  views.py
static/: py.py
support/: serializers.py  urls.py  views.py
user/: __init__.py  admin.py  apps.py  backends.py  routing.py  tests.py  urls.py
users/: admin.py  admin_forms.py  auth_backends.py  backends.py  consumers.py  supa_authbackends.py  urls.py
(+222 files in other folders)
