[tool.poetry]
name = "magzenie"
version = "0.1.0"
description = "Backend for Onltheflyapp.ai,  ai powered apps that talk to each other on the fly based on your intent"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
djangorestframework = "^3.14"
django-cors-headers = "^4.0"
psycopg2-binary = "^2.9"
pillow = "^9.5"
django-environ = "^0.10"
gunicorn = "^20.1"
pytz = "^2024.1"
celery = "^5.4.0"
text-unidecode = "^1.3"
draftjs-sanitizer = "^1.0.0"
measurement = "^3.2.2"
prices = "^1.1.1"
opentracing = "^2.4.0"
oauthlib = "^3.2.2"
botocore = "^1.34.131"
django-countries = "^7.6.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.3.0"}
phonenumbers = "^8.13.39"
django-measurement = "^3.2.4"
django-prices = "^2.3.0"
requests = "^2.32.3"


drf-spectacular-sidecar = "^2024.6.1"
pyjwt = "^2.8.0"
authlib = "^1.3.1"
django-extensions = "^3.2.3"
werkzeug = "^3.0.3"
pyopenssl = "^24.1.0"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
django-nested-admin = "^4.0.2"
django-allauth = {extras = ["google"], version = "^0.63.3"}
requests-oauthlib = "^2.0.0"
whitenoise = "^6.7.0"
drf-yasg = "^1.21.7"
qrcode = "^7.4.2"
django-ordered-model = "^3.7.4"
mapbox = "^0.18.1"
groq = "^0.9.0"
google-api-python-client = "^2.135.0"
pytube = "^15.0.0"
tiktokapi = "^6.3.0"
playwright = "^1.44.0"
pyktok = "^0.0.22"
browser-cookie3 = "^0.19.1"
beautifulsoup4 = "^4.12.3"
numpy = "^2.0.0"
pandas = "^2.2.2"
selenium = "^4.22.0"
asgiref = "^3.8.1"
django-filter = "^24.2"
youtube-transcript-api = "^0.6.2"
openai = "^1.35.10"
supabase = "^2.5.1"
google-generativeai = "^0.7.1"
anthropic = "^0.30.1"
redis = "^5.0.7"
drf-nested-routers = "^0.94.1"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
channels = "^4.1.0"
daphne = "^4.1.2"
channels-redis = "^4.2.0"
watchfiles = "^0.22.0"
drf-spectacular = "^0.27.2"
caprover-api = "^0.1.23"
python-decouple = "^3.8"
shopifyapi = "^12.6.0"
yt-dlp = "^2024.8.6"
graphql-relay = "^3.2.0"



[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-django = "^4.5"
black = "^23.3"
isort = "^5.12"
flake8 = "^6.0"
mypy = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict_optional = true